# pinecone-buddy

./: .env.example  BEST_PRACTICES_CHUNKING.md  Cargo.toml  LICENSE  README.md  embeddings.md
src/: query.rs  upsert.rs
