[package]
name = "pinecone_buddy"
version = "0.1.0"
edition = "2021"



[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.3"
dotenv = "0.15"
thiserror = "1.0"
ignore = "0.4"
uuid = { version = "1.5", features = ["v4"] }
chrono = "0.4"
regex = "1.10"



[[bin]]
name = "upsert"
path = "src/upsert.rs"

[[bin]]
name = "query"
path = "src/query.rs"